some spacing and responsive fixes

--- a/src/app/components/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/components/auth/forgot-password/forgot-password.component.scss
@@ -60,6 +60,17 @@
   }
 }
 
+@media (height < 750px) {
+  .logo {
+    img {
+      height: 30px;
+    }
+    span {
+      font-size: 1.5rem;
+    }
+  }
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
