--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -62,7 +62,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 15px 0 15px 0;
+    margin: 25px 0 25px 0;
     span {
       background-color: #171717;
       width: 30px;
